Update to 0.1.0